# solana-desktop-wallet

./: .env  .env_example  .gitignore  Cargo.toml  README.md  build.rs  watch_and_run.ps1  watch_and_run.sh
app/: app.slint  theme.slint
app/components/: AppButton.slint  AppView.slint  IconButton.slint  InitAccountSetup.slint  Main.slint  MainContent.slint  SideNav.slint
app/components/SideNav/: Account.slint  List.slint  ListItem.slint  SideNavAccount.slint  SolValue.slint  components.slint  index.slint
app/globals/: theme.slint
app/managers/: account-manager.slint  sol-value-manager.slint  view-manager.slint
app/utils/: account-manager.slint  app-manager.slint  custom-theme.slint  view-manager.slint  wallet-manager.slint
app/views/: Accounts.slint  Collections.slint  Explore.slint  Settings.slint  Swap.slint  Wallet.slint  index.slint
app/views/Accounts/: index.slint
app/views/Accounts/components/: AccountListItem.slint  AccountsList.slint  AccountsListHeader.slint  AccountsToolbar.slint  index.slint
src/: app.rs  connection.rs  database.rs  initializer.rs  main.rs  token_value.rs
src/app/: app.rs  callback_manager.rs  errors.rs  global_manager.rs  mod.rs
src/connection/: mod.rs
src/database/: account.rs  cache.rs  errors.rs  mod.rs  wallet.rs
src/services/: account_service.rs
