[package]
name = "solana-desktop-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
slint = "1.8.0"
solana-rpc-client = "2.1.0"
solana-sdk = "2.1.0"
tokio = { version = "1.41.0", features = ["full"] }
