[package]
name = "solana-desktop-wallet"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
bip39 = "2.1.0"
dotenv = "0.15.0"
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
slint = "1.8.0"
solana-rpc-client = "2.1.0"
solana-sdk = "2.1.0"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }

[build-dependencies]
slint-build = "1.8.0"
