[package]
name = "solana-desktop-wallet"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
dotenv = "0.15.0"
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
slint = "1.8.0"
solana-rpc-client = "2.1.0"
solana-sdk = "2.1.0"
thiserror = "2.0.0"
webbrowser = "1.0.2"
serde_json = "1.0.132"

[build-dependencies]
slint-build = "1.8.0"
rusqlite = "0.32.1"
dotenv = "0.15.0"
thiserror = "2.0.0"
